--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,96 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 240 27% 98%;
+    --foreground: 228 29% 7%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary-400: 252 100% 73%;
+    --primary-700: 252 94% 67%;
+    --primary-foreground: 0 0% 100%;
+
+    --secondary-400: 231 67% 99%;
+    --secondary-700: 231 73% 93%;
+    --secondary-foreground: 231 37% 63%;
+
+    --accent-400: 231 20% 27%;
+    --accent-700: 228 29% 7%;
+    --accent-foreground: 231 73% 93%;
+
+    --destructive-400: 0 100% 80%;
+    --destructive-700: 0 80% 63%;
+    --destructive-foreground: 0 0% 100%;
+
+    --muted: 231 20% 61%;
+    --white: 0 0% 100%;
+    --paid: 167 67% 52%;
+    --pending: 34 100% 50%;
+    --draft: 231 20% 27%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --background: 233 30% 11%;
+    --foreground: 0 0% 100%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary-400: 252 100% 73%;
+    --primary-700: 252 94% 67%;
+    --primary-foreground: 0 0% 100%;
+
+    --secondary-400: 231 67% 99%;
+    --secondary-700: 231 73% 93%;
+    --secondary-foreground: 231 37% 63%;
+
+    --accent-400: 231 20% 27%;
+    --accent-700: 233 31% 17%;
+    --accent-foreground: 231 20% 61%;
+
+    --destructive-400: 0 100% 80%;
+    --destructive-700: 0 80% 63%;
+    --destructive-foreground: 0 0% 100%;
+
+    --muted: 231 20% 61%;
+    --white: 0 0% 100%;
+    --paid: 167 67% 52%;
+    --pending: 34 100% 50%;
+    --draft: 231 20% 27%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
