Folder Structure, adding top section of home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
     --destructive-700: 0 80% 63%;
     --destructive-foreground: 0 0% 100%;
 
+    --bluish: 231 73% 93%;
     --muted: 231 20% 61%;
     --white: 0 0% 100%;
     --paid: 167 67% 52%;
