Single Invoice view styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,7 @@
     --card: 0 0% 100%;
     --card-foreground: 228 29% 7%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: 240 27% 98%;
 
     --primary-400: 252 100% 73%;
     --primary-700: 252 94% 67%;
@@ -35,6 +34,7 @@
     --paid: 167 67% 52%;
     --pending: 34 100% 50%;
     --draft: 231 20% 27%;
+    --dark: 231 20% 27%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
@@ -54,8 +54,7 @@
     --card: 233 31% 17%;
     --card-foreground: 0 0% 100%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: 233 30% 21%;
 
     --primary-400: 252 100% 73%;
     --primary-700: 252 94% 67%;
@@ -79,6 +78,7 @@
     --paid: 167 67% 52%;
     --pending: 34 100% 50%;
     --draft: 231 73% 93%;
+    --dark: 228 29% 7%;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
